--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+  <title>Nasa Images Wiki</title>
   <head>
-    <title>Nasa Images Wiki</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+    <!---axios src ^^^ --->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <script src="index.js"></script>
+    <script src"></script>
+    <script src=""></script>
   </body>
 </html>
