--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <script src="index.js"></script>
+    <script src="index.js"></script>
     <script src"></script>
     <script src=""></script>
   </body>
