Commit Update to Body

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="MainBackground">
+    <img class="bodyBackground" />
     <script src="landingbackground.js"></script>
   </body>
 </html>
