Commit Add Banner

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="MainBackground">
-    <img class="bodyBackground" />
+    <header id="notbrucebanner"></header>
+    <div class="backgroundImageContainer">
+      <img class="bodyBackground" />
+    </div>
+    <div>
+      <footer></footer>
+    </div>
+
     <script src="landingbackground.js"></script>
   </body>
 </html>
