Commit Structure Body

--- a/index.html
+++ b/index.html
@@ -6,23 +6,21 @@
     <!---axios src ^^^ --->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-    />
-    <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body class="MainBackground">
-    <header id="notbrucebanner"></header>
-    <div class="backgroundImageContainer">
-      <img class="bodyBackground" />
+  <body class="mainBody">
+    <div class="bodyMain">
+      <img id="bodyMainImage" class="bodyMainImage" />
+      <div>
+        <div class="bodyHead"></div>
+        <div class="bodyCenter"></div>
+        <div class="bodyFoot"></div>
+      </div>
     </div>
-    <div>
-      <footer></footer>
-    </div>
-
+    <footer></footer>
     <script src="landingbackground.js"></script>
   </body>
 </html>
