Commit NasaImagesWiki Phase 2 Complete

--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body class="mainBody">
-    <div class="bodyMain">
-      <img id="bodyMainImage" class="bodyMainImage" />
-      <div>
-        <div class="bodyHead"></div>
-        <div class="bodyCenter"></div>
-        <div class="bodyFoot"></div>
+  <body>
+    <div id="head">
+      <p>I am the Head</p>
+      <div id="headIcon"></div>
+      <div id="headSearchbar"></div>
+    </div>
+    <div id="bodyCenter">
+      <p>I am the Body</p>
+      <div id="bodyMain">
+        <h1>NASA IMAGE WIKI</h1>
       </div>
     </div>
-    <footer></footer>
+    <div id="foot">
+      <p>I am the Credits</p>
+    </div>
     <script src="landingbackground.js"></script>
   </body>
 </html>
