Commit Remove Int Scale

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta id="myViewport" name="myViewport" content="width=device-width" />
   </head>
   <body>
     <div id="head">
@@ -26,6 +26,7 @@
     <div id="foot">
       <p>I am the Credits</p>
     </div>
+    <script src="responsiveCSS.js"></script>
     <script src="landingbackground.js"></script>
   </body>
 </html>
