--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <!---axios src ^^^ --->
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
